update footer and header
แก้พวก header กับ footer

--- a/bin/product-details.html
+++ b/bin/product-details.html
@@ -77,7 +77,7 @@
     <div class="container">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
                 <li class="breadcrumb-item"><a id="catlink" href="#"></a></li>
                 <li id="titlelil" class="breadcrumb-item active" aria-current="page"></li>
             </ol>
