--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -11,10 +11,10 @@
 <body>
     <script src="/css/style.css"></script>
     <section id = "header">
-        <a href="#"><img src="/img/.jpg" class="logo" alt=""></a><!--Logo website ปล่อยไปก่อน-->
+        <a href="/index.html"><img src="/img/draft1.png" width="40" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
-                <li><a class = "active" href="/html/index.html">Home</a></li>
+                <li><a class = "active" href="/index.html">Home</a></li>
                 <li><a href="/html/shop.html">Shop</a></li>
                 <li><a href="/html/signup.html" id="signuplink">Sign Up</a></li>
                 <li><a href="/html/login.html" id="loginlink">Login</a></li>
@@ -32,6 +32,52 @@
     </section>
 
 
+
+
+
+
+    <!----------------------- footer---------------------- -->
+    <footer class="section-p1">
+        <div class="col">
+            <img class="logo" src="img/" alt="">
+            <h4>Contact</h4>
+            <p><strong>Address: </strong>Bangkok Thailand</p>
+            <p><strong>Phone: </strong>089 133 7420</p>
+            <p><strong>Hours: </strong>10:00 - 18:00,Mon - Sat</p>
+            <div class="follow">
+                <h4>Follow us</h4>
+                <div class="icon">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-youtube"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-pinterest-p"></i>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <h4>About</h4>
+            <a href="/html/aboutus.html">About Us</a>
+            <!-- <a href="#">Delivery Information</a> -->
+            <!-- <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Conditions</a> -->
+            <a href="/html/contactus.html">Contact Us</a>
+        </div>
+        <div class="col">
+            <h4>My Account</h4>
+            <a href="/html/signup.html">Sign Up</a>
+
+            <a href="/html/login.html" id="loginlink">Login</a>
+
+        </div>
+        <div class="col install">
+            <h4>Cart</h4>
+            <a href="/html/cart.html">View Cart</a>
+        </div>
+        <div class="copyright">
+            <p>2022, WebCreatorBro</p>
+        </div>
+    </footer>
 
 </body>
 </html>
