--- a/html/admin.html
+++ b/html/admin.html
@@ -102,7 +102,7 @@
         </div>
     </div>
 
-    <button onclick="location.href='/html/index.html'" class="btn btn-primary m-3 position-absolute top-0 end-0">Go to
+    <button onclick="location.href='/index.html'" class="btn btn-primary m-3 position-absolute top-0 end-0">Go to
         Home</button>
 
 
@@ -420,11 +420,6 @@
                 })
         }
 
-        // กูทำลบรูปไม่เป็น
-        // function DeleteImg(img,index) {
-
-        //     let image = 
-        // }
 
         delBtn.addEventListener("click", DeleteData);
 
