--- a/bin/detailshop.html
+++ b/bin/detailshop.html
@@ -16,7 +16,7 @@
         <a href="#"><img src="/img/draft1.png" width="40" class="logo" alt=""></a><!--Logo website ปล่อยไปก่อน-->
         <div>
             <ul id="navbar">
-                <li><a href="/html/index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a class="active" href="/html/shop.html">Shop</a></li>
                 <li><a href="/html/signup.html">Sign Up</a></li>
                 <li><a href="/html/login.html">Login</a></li>
