--- a/html/login.html
+++ b/html/login.html
@@ -102,7 +102,7 @@
 
         function login(user){
             sessionStorage.setItem("user", JSON.stringify(user));
-            window.location="index.html";
+            window.location="/index.html";
         }
 
 //--------------------------------ปุ่มล็อกอิน----------------------------------//
