about us finish

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <!-- <a href="#">Delivery Information</a> -->
             <!-- <a href="#">Privacy Policy</a>
             <a href="#">Terms & Conditions</a> -->
-            <a href="/html/contactus.html">Contact Us</a>
+            <!-- <a href="/html/contactus.html">Contact Us</a> -->
 
         </div>
         <div class="col">
