--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -12,6 +12,8 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="/css/aboutus.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 
 <body>
@@ -40,9 +42,9 @@
     <section class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto items-center text-center ">
             <div class="flex flex-col text-center w-full mb-20">
-                <h1 class="text-2xl font-medium title-font mb-4 text-gray-900">OUR TEAM</h1>
-                <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn
-                    asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them.
+                <h1 class="text-2xl font-medium title-font mb-4 text-gray-900">MEET OUR TEAM</h1>
+                <p class="lg:w-2/3 mx-auto leading-relaxed text-base">
+                    นี่ก็คือกลุ่มของพวกเรานะครับ WebCreatorBro มีสมาชิกผู้สร้างตามนี้เลย
                 </p>
             </div>
 
@@ -50,35 +52,24 @@
             <div class="flex flex-wrap-m-3">
                 <div class="p-4 lg:w-1/3 md:w-1/2">
                     <div class="h-full flex flex-col items-center text-center">
-                        <img alt="team" class="flex-shrink-0 rounded-lg w-full h-full object-cover object-center mb-4"
+                        <img alt="team" class="flex-shrink-0 rounded-lg w-full h-1/2 object-cover object-center mb-4"
                             src="/img/itee.jpg">
                         <div class="w-full">
-                            <h2 class="title-font font-medium text-lg text-gray-900">Alper Kamu</h2>
-                            <h3 class="text-gray-500 mb-3">UI Developer</h3>
-                            <p class="mb-4">DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware.
+                            <h2 class="title-font font-medium text-lg text-gray-900">Noppawut yiangchaimongkol</h2>
+                            <h3 class="text-gray-500 mb-3">"เรื่องบังเอิญไม่มีอยู่จริง การที่มาเจอกับพวกโง่นี้ก็เช่นกัน"
+                            </h3>
+                            <p class="mb-4"> ทุกการทำงาน จะมี Hopium เสมอ แต่ถ้าไม่มี hopium ก้จะต้องพุทมายอามเม้อออน
+                                ทูโชว ฮาวสตรองไอแอม
                             </p>
                             <span class="inline-flex">
-                                <a class="text-gray-500">
-                                    <svg fill="none" stroke="currentColor" stroke-linecap="round"
-                                        stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                                        <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-                                    </svg>
+                                <a class="text-gray-500" href="https://www.facebook.com/Idkzxsd/" target="_blank">
+                                    <ion-icon name="logo-facebook"></ion-icon>
                                 </a>
-                                <a class="ml-2 text-gray-500">
-                                    <svg fill="none" stroke="currentColor" stroke-linecap="round"
-                                        stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                                        <path
-                                            d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
-                                        </path>
-                                    </svg>
+                                <a class="ml-2 text-gray-500" href="https://www.instagram.com/_idkzxsd/" target="_blank">
+                                    <ion-icon name="logo-instagram"></ion-icon>
                                 </a>
-                                <a class="ml-2 text-gray-500">
-                                    <svg fill="none" stroke="currentColor" stroke-linecap="round"
-                                        stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                                        <path
-                                            d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z">
-                                        </path>
-                                    </svg>
+                                <a class="ml-2 text-gray-500" href="https://github.com/Krispzin" target="_blank">
+                                    <ion-icon name="logo-github"></ion-icon>
                                 </a>
                             </span>
                         </div>
@@ -86,72 +77,50 @@
                 </div>
                 <div class="p-4 lg:w-1/3 md:w-1/2">
                     <div class="h-full flex flex-col items-center text-center">
-                        <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4"
-                            src="https://dummyimage.com/201x201">
+                        <img alt="team" class="flex-shrink-0 rounded-lg w-full h-1/2 object-cover object-center mb-4"
+                            src="/img/iq.jpg">
                         <div class="w-full">
-                            <h2 class="title-font font-medium text-lg text-gray-900">Holden Caulfield</h2>
-                            <h3 class="text-gray-500 mb-3">UI Developer</h3>
-                            <p class="mb-4">DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware.
+                            <h2 class="title-font font-medium text-lg text-gray-900">Pandin Kittithorn</h2>
+                            <h3 class="text-gray-500 mb-3"> "จ่าวชังฮ่าว จงกั๋ว เจี้ยนใจ้ หวอโย่ว ปิ้งฉีลิ่ง"</h3>
+                            <p class="mb-4"> เอาสี้นมาสับๆแล้วกะคั่วน้ำฮ้อนให้มันสุกแล้วก้ปรุงด้วยน้ำปลาผงชูรส ใส่บักพริกบักนาวผักบุ้งผักชีหัวคิงไค คนให้มันเข้ากันแล้วกะซิมเบิ่ง
                             </p>
                             <span class="inline-flex">
-                                <a class="text-gray-500">
-                                    <svg fill="none" stroke="currentColor" stroke-linecap="round"
-                                        stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                                        <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-                                    </svg>
-                                </a>
-                                <a class="ml-2 text-gray-500">
-                                    <svg fill="none" stroke="currentColor" stroke-linecap="round"
-                                        stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                                        <path
-                                            d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
-                                        </path>
-                                    </svg>
-                                </a>
-                                <a class="ml-2 text-gray-500">
-                                    <svg fill="none" stroke="currentColor" stroke-linecap="round"
-                                        stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                                        <path
-                                            d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z">
-                                        </path>
-                                    </svg>
-                                </a>
+                                <span class="inline-flex">
+                                    <a class="text-gray-500" href="https://www.facebook.com/profile.php?id=100002416693485" target="_blank">
+                                        <ion-icon name="logo-facebook"></ion-icon>
+                                    </a>
+                                    <a class="ml-2 text-gray-500" href="https://www.instagram.com/qonfused.mood/" target="_blank">
+                                        <ion-icon name="logo-instagram"></ion-icon>
+                                    </a>
+                                    <a class="ml-2 text-gray-500" href="https://github.com/ikiew8520" target="_blank">
+                                        <ion-icon name="logo-github"></ion-icon>
+                                    </a>
+                                </span>
                             </span>
                         </div>
                     </div>
                 </div>
                 <div class="p-4 lg:w-1/3 md:w-1/2">
                     <div class="h-full flex flex-col items-center text-center">
-                        <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4"
-                            src="https://dummyimage.com/202x202">
+                        <img alt="team" class="flex-shrink-0 rounded-lg w-full h-1/2 object-cover object-center mb-4"
+                            src="/img/iice.jpg">
                         <div class="w-full">
-                            <h2 class="title-font font-medium text-lg text-gray-900">Atticus Finch</h2>
-                            <h3 class="text-gray-500 mb-3">UI Developer</h3>
-                            <p class="mb-4">DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware.
+                            <h2 class="title-font font-medium text-lg text-gray-900">Archawin chatanunthawej</h2>
+                            <h3 class="text-gray-500 mb-3">" 'j;'ovow,jws; vpkdovo,kdqg]pot FvFsh "</h3>
+                            <p class="mb-4">w,jgvk 
                             </p>
                             <span class="inline-flex">
-                                <a class="text-gray-500">
-                                    <svg fill="none" stroke="currentColor" stroke-linecap="round"
-                                        stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                                        <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-                                    </svg>
-                                </a>
-                                <a class="ml-2 text-gray-500">
-                                    <svg fill="none" stroke="currentColor" stroke-linecap="round"
-                                        stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                                        <path
-                                            d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
-                                        </path>
-                                    </svg>
-                                </a>
-                                <a class="ml-2 text-gray-500">
-                                    <svg fill="none" stroke="currentColor" stroke-linecap="round"
-                                        stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                                        <path
-                                            d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z">
-                                        </path>
-                                    </svg>
-                                </a>
+                                <span class="inline-flex">
+                                    <a class="text-gray-500" href="https://www.facebook.com/profile.php?id=100009195988006" target="_blank">
+                                        <ion-icon name="logo-facebook"></ion-icon>
+                                    </a>
+                                    <a class="ml-2 text-gray-500" href="https://www.instagram.com/666666zc/" target="_blank">
+                                        <ion-icon name="logo-instagram"></ion-icon>
+                                    </a>
+                                    <a class="ml-2 text-gray-500" href="https://github.com/iceisice4" target="_blank">
+                                        <ion-icon name="logo-github"></ion-icon>
+                                    </a>
+                                </span>
                             </span>
                         </div>
                     </div>
@@ -193,7 +162,7 @@
             <!-- <a href="#">Delivery Information</a> -->
             <!-- <a href="#">Privacy Policy</a>
             <a href="#">Terms & Conditions</a> -->
-            <a href="/html/contactus.html">Contact Us</a>
+            <!-- <a href="/html/contactus.html">Contact Us</a> -->
         </div>
         <div class="col">
             <h4>My Account</h4>
