--- a/html/shop.html
+++ b/html/shop.html
@@ -12,7 +12,7 @@
 
 <body>
     <section id = "header">
-        <a href="/index.html"><img src="/img/draft1.png" width="40" class="logo" alt=""></a>
+        <a href="../index.html"><img src="/img/draft1.png" width="40" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
                 <li><a href="/index.html">Home</a></li>
@@ -80,7 +80,7 @@
             <!-- <a href="#">Delivery Information</a> -->
             <!-- <a href="#">Privacy Policy</a>
             <a href="#">Terms & Conditions</a> -->
-            <a href="/html/contactus.html">Contact Us</a>
+            <!-- <a href="/html/contactus.html">Contact Us</a> -->
         </div>
         <div class="col">
             <h4>My Account</h4>
