--- a/html/cart.html
+++ b/html/cart.html
@@ -132,7 +132,7 @@
 
         function Signout(){
             sessionStorage.removeItem("user");
-            window.location = "index.html";
+            window.location = "../index.html";
         }
 
 //--------------------------------IMPORT + CONFIGURATION-------------------------------//
