--- a/html/shop.html
+++ b/html/shop.html
@@ -117,7 +117,7 @@
 
         function Signout(){
             sessionStorage.removeItem("user");
-            window.location = "/index.html";
+            window.location = "../index.html";
         }
 
 //--------------------------------เมื่อโหลด--------------------------------//
