--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             switch(currentuser.role){
                 case "admin":
                     signuplink.innerText = "Go To Admin Panel";
-                    signuplink.href = "admin.html";
+                    signuplink.href = "/html/admin.html";
 
                     loginlink.innerText = "Sign Out";
                     loginlink.href = "#";
@@ -189,7 +189,7 @@
                     break;
                 default:
                     signuplink.innerText = "Sign Up";
-                    signuplink.href = "signup.html";
+                    signuplink.href = "/html/signup.html";
 
                     loginlink.innerText = "Login";
                     loginlink.href = "login.html";
@@ -202,20 +202,20 @@
 
 //--------------------------------IMPORT + CONFIGURATION-------------------------------//
 
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
 
 
-const firebaseConfig = {
-    apiKey: "AIzaSyBChr-7kEA30C5KceoYF0bA2LMCoHzWXzE",
-    authDomain: "wearit-f97b1.firebaseapp.com",
-    databaseURL: "https://wearit-f97b1-default-rtdb.asia-southeast1.firebasedatabase.app",
-    projectId: "wearit-f97b1",
-    storageBucket: "wearit-f97b1.appspot.com",
-    messagingSenderId: "225288076004",
-    appId: "1:225288076004:web:755e446f713c543fd14af1"
-};
+        const firebaseConfig = {
+            apiKey: "AIzaSyBChr-7kEA30C5KceoYF0bA2LMCoHzWXzE",
+            authDomain: "wearit-f97b1.firebaseapp.com",
+            databaseURL: "https://wearit-f97b1-default-rtdb.asia-southeast1.firebasedatabase.app",
+            projectId: "wearit-f97b1",
+            storageBucket: "wearit-f97b1.appspot.com",
+            messagingSenderId: "225288076004",
+            appId: "1:225288076004:web:755e446f713c543fd14af1"
+        };
 
-const app = initializeApp(firebaseConfig);
+        const app = initializeApp(firebaseConfig);
 
 // --------------------import database functions---------------------//
 
